--- a/frontend/src/shared/i18n/en.json
+++ b/frontend/src/shared/i18n/en.json
@@ -13,5 +13,8 @@
     "title_validation": "The new post needs a title",
     "body_validation": "The new post needs a body",
     "category_validation": "The new post needs one category"
+  },
+  "qqq": {
+    "w": "en"
   }
 }
