--- a/frontend/src/shared/i18n/pt.json
+++ b/frontend/src/shared/i18n/pt.json
@@ -13,5 +13,8 @@
     "title_validation": "O novo post precisa de um titúlo",
     "body_validation": "O novo post precisa de um corpo",
     "category_validation": "O novo post precisa de uma categoria"
+  },
+  "qqq": {
+    "w": "pt"
   }
 }
